WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106448
Regression(
r138681
) : Add HAVE(ACCESSIBILITY) guard to atk files, fix for a fix.
https://bugs.webkit.org/show_bug.cgi?id=106448
Summary
Regression(r138681) : Add HAVE(ACCESSIBILITY) guard to atk files, fix for a fix.
Hugo Parente Lima
Reported
2013-01-09 06:07:01 PST
Some atk files don't use HAVE(ACCESSIBILITY). It may makes build errors when the macro isn't enabled, this was partially fixed by
bug 106290
, but in some files the include "atk.h" was left outside the guard.
Attachments
Patch
(3.53 KB, patch)
2013-01-09 06:19 PST
,
Hugo Parente Lima
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hugo Parente Lima
Comment 1
2013-01-09 06:19:17 PST
Created
attachment 181911
[details]
Patch
Gyuyoung Kim
Comment 2
2013-01-09 06:23:51 PST
Comment on
attachment 181911
[details]
Patch I missed this. Thanks.
WebKit Review Bot
Comment 3
2013-01-09 09:02:08 PST
Comment on
attachment 181911
[details]
Patch Clearing flags on attachment: 181911 Committed
r139196
: <
http://trac.webkit.org/changeset/139196
>
WebKit Review Bot
Comment 4
2013-01-09 09:02:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug