Regression(r138681) : Add HAVE(ACCESSIBILITY) guard to atk files, fix for a fix. https://bugs.webkit.org/show_bug.cgi?id=106448

Reviewed by Gyuyoung Kim.

Some atk files don't use HAVE(ACCESSIBILITY). It might make build errors when
the macro isn't enabled.

* accessibility/atk/WebKitAccessibleHyperlink.h:
* accessibility/atk/WebKitAccessibleInterfaceAction.h:
* accessibility/atk/WebKitAccessibleInterfaceComponent.h:
* accessibility/atk/WebKitAccessibleInterfaceHypertext.h:


Canonical link: https://commits.webkit.org/124645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139196 268f45cc-cd09-0410-ab3c-d52691b4dbfc